i am almost done with srevices section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         </div>
     </div>
     </section>
+    <section id="services-img">
+        <div class="img"><img src="./services/images.jpg" alt="" height="60px">
+        <h2>WEB DESIGN</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatibus omnis ducimus repellendus sequi, tempora maxime iste ipsam recusandae cum veniam error quisquam dolore. Voluptatem totam praesentium ullam eos voluptatibus.</p></div>
+        <div class="img"><img src="./services/images.jpg" alt="" height="60px">
+        <h2>WEB DESIGN</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatibus omnis ducimus repellendus sequi, tempora maxime iste ipsam recusandae cum veniam error quisquam dolore. Voluptatem totam praesentium ullam eos voluptatibus.</p></div>
+        <div class="img"><img src="./services/images.jpg" alt="" height="60px">
+        <h2>WEB DESIGN</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatibus omnis ducimus repellendus sequi, tempora maxime iste ipsam recusandae cum veniam error quisquam dolore. Voluptatem totam praesentium ullam eos voluptatibus.</p></div>
+        <div class="img"><img src="./services/images.jpg" alt="" height="60px">
+        <h2>WEB DESIGN</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatibus omnis ducimus repellendus sequi, tempora maxime iste ipsam recusandae cum veniam error quisquam dolore. Voluptatem totam praesentium ullam eos voluptatibus.</p></div>
+    </section>
     
     <script src="./script.js"></script>
 </body>
