The about me section has been completed

--- a/index.html
+++ b/index.html
@@ -145,7 +145,21 @@
 
         </div>
     </section>
-
+<section id="aboutMe">
+    <div class="image">
+        <div class="img1">
+            <img src="./services/profile-fotor-bg-remover-2024021917200.png" alt="">
+        </div>
+    </div>
+    <div class="contant">
+        <h2>ABOUT <span>ME</span></h2>
+        <h1>Front End Developer</h1>
+        <p>Hi, I'm [Abdul Ahad], a passionate web developer with a strong foundation in HTML, CSS, and basic JavaScript. I specialize in creating visually appealing and fully responsive websites that provide an excellent user experience across all devices. My journey in web development has led me to work on a variety of projects, from cloning popular platforms like Netflix to designing websites for e-commerce and coffee shops.</p>
+        <p>With a focus on clean design and effective functionality, I aim to bring clients' ideas to life through modern, user-friendly websites. I'm constantly learning and improving my skills, and I enjoy solving problems and pushing the limits of web technologies.</p>
+        <p>When I'm not coding, I love exploring new trends in tech and expanding my knowledge in JavaScript and web development. If you're looking for someone who can transform your vision into a beautiful website, let's connect!</p><br><br>
+        <button>DOWNLOAD RESUME</button>
+    </div>
+</section>
     <script src="./script.js"></script>
 </body>
 
