starting with contact section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
         <button>DOWNLOAD RESUME</button>
     </div>
 </section>
+<section id="contactInfo">
+    <h2>CONTACT <span>INFO</span></h2>
+</section>
     <script src="./script.js"></script>
 </body>
 
