The contact section has been completed

--- a/index.html
+++ b/index.html
@@ -162,6 +162,32 @@
 </section>
 <section id="contactInfo">
     <h2>CONTACT <span>INFO</span></h2>
+    <div class="container1">
+        <div class="boxes">
+            <img src="./services/contact-information.png" alt="" height="50px">
+           <div class="desc">
+             <h1>Phone</h1>
+             <p>+92 313 9126268</p>
+             <p>+92 340 4463531</p>
+            </div>
+        </div>
+        <div class="boxes">
+            <img src="./services/gmail.png" alt="" height="50px">
+           <div class="desc">
+             <h1>Email</h1>
+             <p>a.a.khan6202@gmail.com</p>
+             
+            </div>
+        </div>
+        <div class="boxes">
+            <img src="./services/location-pin.png" alt="" height="50px">
+           <div class="desc">
+             <h1>Address</h1>
+             <p>Burj Nasir Khan P/O</p>
+             <p>Kafoor Dehri Peshawar</p>
+            </div>
+        </div>
+    </div>
 </section>
     <script src="./script.js"></script>
 </body>
