The website is almost completed now working on js

--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                     trending content and featured movies. Focused on clean UI design, responsive breakpoints, and a
                     mobile-friendly experience.</p><br>
                 <p><span>Skills Used:</span> HTML, CSS (Flexbox), Responsive Design.</p><br>
-                <p><span>GitHub Link :</span> [Link to project]</p>
+                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/task05-html-css-responsive-product-catalogue-website.git?authuser=0" target="_blank">Repository link</a><br> <a href="https://abdulahad911.github.io/task05-html-css-responsive-product-catalogue-website/?authuser=0" target="_blank">Deployment link</a></p>
             </div>
             <img src="./services/download.png" alt="">
         </div>
         <div class="box1">
-            <img src="./services/coffee.jpg" alt="">
-            <div class="items1">
+            <a href="https://abdulahad911.github.io/task06-html-css-responsive-COFFEE-SHOP-website/?authuser=0" target="_blank"> <img src="./services/coffee.jpg" alt=""></a>
+             <div class="items1">
                 <p><span>Description:</span> Created a responsive website for a fictional coffee shop, showcasing menu
                     items, business hours, and location. Designed with a focus on an attractive, user-friendly layout
                     that adapts to all screen sizes. Integrated CSS animations for hover effects and a seamless user
                     experience across devices.</p><br>
                 <p><span>Skills Used:</span> HTML, CSS (Animations, Flexbox), Responsive Design.</p><br>
-                <p><span>GitHub Link :</span> [Link to project]</p>
+                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/task06-html-css-responsive-COFFEE-SHOP-website.git?authuser=0" target="_blank">Repository link</a><br> <a href="https://abdulahad911.github.io/task06-html-css-responsive-COFFEE-SHOP-website/?authuser=0" target="_blank">Deployment link</a></p>
             </div>
 
         </div>
@@ -123,24 +123,19 @@
                     Emphasized creating a smooth navigation experience with a visually appealing, professional design.
                 </p><br>
                 <p><span>Skills Used:</span> HTML, CSS (Flexbox), Responsive Design.</p><br>
-                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/complete-portfolio-website.git">Repository link</a><br>
-                <a href="https://abdulahad911.github.io/complete-portfolio-website/?authuser=0">Deployment link</a></p>
+                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/task05-html-css-responsive-product-catalogue-website.git?authuser=0" target="_blank">Repository link</a><br>
+                <a href="https://abdulahad911.github.io/task05-html-css-responsive-product-catalogue-website/?authuser=0" target="_blank">Deployment link</a></p>
             </div>
-            <img src="./services/digital.jpg" alt="">
+            <a href="https://abdulahad911.github.io/task05-html-css-responsive-product-catalogue-website/?authuser=0" target="_blank"> <img src="./services/digital.jpg" alt=""></a>
         </div>
         <div class="box1">
-            <img src="./services/portfoli2.jpg" alt="">
-            <div class="items1">
-                <p><span>Description:</span> Built a personal portfolio website to showcase my web development projects
-                    and services. The website features a clean and modern design, a dedicated services section, a
-                    project gallery with detailed descriptions, and a contact form for potential clients. Focused on
-                    creating a user-friendly, fully responsive design that looks great on both desktop and mobile
-                    devices.</p>
-                <p><span>Skills Used:</span> HTML, CSS (Flexbox, Animations), Basic JavaScript (for form validation and
-                    smooth scrolling), Responsive Design.
+            <a href="https://abdulahad911.github.io/task04-html-css-responsive-book-store-website/?authuser=0" target="_blank"> <img src="./services/portfoli2.jpg" alt="">
+            <div class="items1"></a>
+                <p><span>Description:</span> Developed a fully responsive bookshop website featuring a clean, modern design with categories for different genres, a search functionality, and detailed book listings. The website includes sections for featured books, bestsellers, and new arrivals. Focused on user-friendly navigation, ensuring a seamless experience on all devices.</p>
+                <p><span>Skills Used:</span> HTML, CSS (Flexbox) for   Responsive Design.
                 </p>
-                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/complete-portfolio-website.git">Repository link</a><br>
-                    <a href="https://abdulahad911.github.io/complete-portfolio-website/?authuser=0">Deployment link</a></p>
+                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/task04-html-css-responsive-book-store-website.git?authuser=0" target="_blank">Repository link</a><br>
+                    <a href="https://abdulahad911.github.io/task04-html-css-responsive-book-store-website/?authuser=0" target="_blank">Deployment link</a></p>
             </div>
 
         </div>
@@ -191,5 +186,22 @@
 </section>
     <script src="./script.js"></script>
 </body>
-
+<footer>
+    <h3><span>A</span>bdul <span>A</span>had</h3>
+    <p>Your complete Web Solution</p>
+    <div class="ft">
+        <h2>Connect with Us</h2>
+        <!-- facebook -->
+        <div><a href="https://www.facebook.com/profile.php?id=100013248979266&mibextid=ZbWKwL"><img
+                    src="./services/icons8-facebook.gif" alt="" height="50px"></a>
+             <!-- instagram        -->
+            <a href="https://www.instagram.com/_ahad012?igsh=MXB3N3FsdGdoMHY1Mw=="><img src="./services/icons8-instagram.gif"
+                    alt="" height="50px"></a>
+            <a
+                href="https://www.linkedin.com/in/abdul-ahad-39a162223?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BQYaCy2uLTTSZtBKrylxdmA%3D%3D"><img
+                    src="./services/icons8-linkedin.gif" alt="" height="50px"></a>
+        </div>
+    </div>
+    <p>Copyright &#169; 2024, Portfolio Website, Abdul Ahad, All Rights Reserved.</p>
+</footer>
 </html>
