The website is completed

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <li>
                     <h3><span>A</span>bdul <span>A</span>had</h3>
                 </li>
-                <li class="hideOnMobile"><a href="#">Home</a></li>
-                <li class="hideOnMobile"><a href="#">Services</a></li>
-                <li class="hideOnMobile"><a href="#">Projects</a></li>
-                <li class="hideOnMobile"><a href="#">About</a></li>
-                <li class="hideOnMobile"><a href="#">Contact</a></li>
+                <li class="hideOnMobile"><a href="#" onclick="scrollToSection('home')">Home</a></li>
+    <li class="hideOnMobile"><a href="#" onclick="scrollToSection('services')">Services</a></li>
+    <li class="hideOnMobile"><a href="#" onclick="scrollToSection('projects')">Projects</a></li>
+    <li class="hideOnMobile"><a href="#" onclick="scrollToSection('aboutMe')">About</a></li>
+    <li class="hideOnMobile"><a href="#" onclick="scrollToSection('contactInfo')">Contact</a></li>
                 <div class="blinking">
                     <li class="menu-button" onclick=showSideBar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg"
                                 height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368">
@@ -36,11 +36,11 @@
                             <path
                                 d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
                         </svg></a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" onclick="scrollToSection('home')">Home</a></li>
+                <li><a href="#" onclick="scrollToSection('services')">Services</a></li>
+                <li><a href="#" onclick="scrollToSection('projects')">Projects</a></li>
+                <li><a href="#" onclick="scrollToSection('aboutMe')">About</a></li>
+                <li><a href="#" onclick="scrollToSection('contactInfo')">Contact</a></li>
             </ul>
         </nav>
         <div class="container">
@@ -100,9 +100,9 @@
                     trending content and featured movies. Focused on clean UI design, responsive breakpoints, and a
                     mobile-friendly experience.</p><br>
                 <p><span>Skills Used:</span> HTML, CSS (Flexbox), Responsive Design.</p><br>
-                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/task05-html-css-responsive-product-catalogue-website.git?authuser=0" target="_blank">Repository link</a><br> <a href="https://abdulahad911.github.io/task05-html-css-responsive-product-catalogue-website/?authuser=0" target="_blank">Deployment link</a></p>
+                <p><span>GitHub Link :</span> <a href="https://github.com/Abdulahad911/Netflix-clone.git" target="_blank">Repository link</a><br> <a href="https://abdulahad911.github.io/Netflix-clone/" target="_blank">Deployment link</a></p>
             </div>
-            <img src="./services/download.png" alt="">
+            <a href="https://abdulahad911.github.io/Netflix-clone/" target="_blank"> <img src="./services/download.png" alt=""></a>
         </div>
         <div class="box1">
             <a href="https://abdulahad911.github.io/task06-html-css-responsive-COFFEE-SHOP-website/?authuser=0" target="_blank"> <img src="./services/coffee.jpg" alt=""></a>
